--- a/index.html
+++ b/index.html
@@ -215,6 +215,6 @@
         runAsync().start();
     })();
     </script>
-    <iframe src = "./给你们.mp3" allow = "autoplay" hidden /> //自己修改音乐位置
+    <iframe src = "./MasterVV.github.io/给你们.mp3" allow = "autoplay" hidden /> //自己修改音乐位置
 </body>
 </html>
